Ajout de style sur Movies.js et MovieCard.js

--- a/src/styles/components/_movie-card.scss
+++ b/src/styles/components/_movie-card.scss
@@ -1,9 +1,12 @@
 .movie-card{
 
+    width: 1 0 20%;
+    max-width: 300px;
+
     header{
 
         img{
-
+            width: 100%;
         }
 
         h3{
